--- a/src/main/resources/templates/categories/list.html
+++ b/src/main/resources/templates/categories/list.html
@@ -39,7 +39,7 @@
                              class="h-10 w-10 object-cover rounded"/>
                         <span th:if="${#strings.isEmpty(fetchedCategory.image_url)}" class="text-gray-400 text-sm">no image</span>
                     </td>
-                    <td th:text="${fetchedCategory.category_id}" class="py-2 px-3"></td>
+                    <td th:text="${fetchedCategory.parent?.name_en} ?: '-'"  class="py-2 px-3"></td>
                     <td>
                         <a th:href="@{/admin/categories/{id}/edit(id=${fetchedCategory.id})}" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded m-1">edit</a>
                         <button type="button"
@@ -73,7 +73,7 @@
                     </div>
                     <div>
                         <label class="block text-gray-700 text-sm font-semibold mb-2">parent category</label>
-                        <select th:field="*{category_id}"
+                        <select th:field="*{parent}"
                                 class="w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400 transition">
                             <option selected value="">null</option>
                             <option th:each="cat : ${categories}"
