--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -22,6 +22,7 @@
                     <th class="py-2 px-3 text-gray-600">ID</th>
                     <th class="py-2 px-3 text-gray-600">Name Ar</th>
                     <th class="py-2 px-3 text-gray-600">Name En</th>
+                    <th class="py-2 px-3 text-gray-600">category</th>
                     <th class="py-2 px-3 text-gray-600">Status</th>
                     <th class="py-2 px-3 text-gray-600">Actions</th>
                 </tr>
@@ -31,6 +32,7 @@
                     <td th:text="${fetchedProduct.id}" class="py-2 px-3"></td>
                     <td th:text="${fetchedProduct.name_ar}" class="py-2 px-3"></td>
                     <td th:text="${fetchedProduct.name_en}" class="py-2 px-3"></td>
+                    <td th:text="${fetchedProduct?.category?.name_en} ?: '-'"  class="py-2 px-3"></td>
                     <td th:text="${fetchedProduct.is_active}" class="py-2 px-3 text-green-600 font-semibold"></td>
                     <td>
                         <a th:href="@{/admin/products/{id}/edit(id=${fetchedProduct.id})}" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded m-1">edit</a>
@@ -65,6 +67,17 @@
                     <div>
                         <label class="block text-gray-700 text-sm font-semibold mb-2">Description (EN)</label>
                         <textarea th:field="*{description_en}" rows="3" class="w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400 transition"></textarea>
+                    </div>
+                    <div>
+                        <label class="block text-gray-700 text-sm font-semibold mb-2">category</label>
+                        <select th:field="*{category}"
+                                class="w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-blue-400 transition">
+                            <option selected value="">null</option>
+                            <option th:each="cat : ${categories}"
+                                    th:value="${cat.id}"
+                                    th:text="${#strings.defaultString(cat.name_en, cat.name_ar)}">
+                            </option>
+                        </select>
                     </div>
                     <div>
                         <label class="block text-gray-700 text-sm font-semibold mb-2">Price</label>
